--- a/style.css
+++ b/style.css
@@ -1,11 +1,39 @@
 body {
+    display: flex;
+    flex-direction: column;
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    min-height: 100vh;
 }
 
 header, main, footer {
     display: flex;
+
+}
+
+header {
+    flex: 1 1 0;
+    justify-content: center;
+}
+
+main {
+    display: flex;
+    flex-direction: column;
+    flex: 5 1 0;
+    padding-bottom: 18px;
+}
+
+#book-cards { 
+    display: flex;
+    flex-wrap: wrap;
+}
+
+footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    justify-content: center;
 }
 
 #dialog-book {
