--- a/style.css
+++ b/style.css
@@ -21,18 +21,41 @@ main {
     display: flex;
     flex-direction: column;
     flex: 5 1 0;
-    padding-bottom: 18px;
+}
+
+.main-btn {
+    flex: 1 1 0;
+    width: 50%;
+    margin: 0 auto;
 }
 
 #book-cards { 
     display: flex;
+    flex: 10 1 0;
     flex-wrap: wrap;
+    padding-bottom: 6%;
+}
+
+#book-cards > * {
+    flex: 1 1 33.3%;
+    max-width: 33.3%;
+    max-height: 80%;
+    display: flex;
+    gap: 3%;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.book-card > * {
+    margin: 0;
 }
 
 footer {
     position: absolute;
     bottom: 0;
     width: 100%;
+    height: 7%;
     justify-content: center;
 }
 
