--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ header {
 main {
     display: flex;
     flex-direction: column;
-    flex: 5 1 0;
+    flex: 6 1 0;
 }
 
 .main-btn {
@@ -31,32 +31,42 @@ main {
 
 #book-cards { 
     display: flex;
-    flex: 10 1 0;
+    flex: 12 1 0;
     flex-wrap: wrap;
-    padding-bottom: 6%;
+    max-width: 100%;
 }
 
 #book-cards > * {
-    flex: 1 1 33.3%;
-    max-width: 33.3%;
+    flex: 1 1 29%;
+    max-width: 29%;
     max-height: 80%;
     display: flex;
     gap: 3%;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin: 2%;
 }
 
 .book-card > * {
     margin: 0;
 }
 
+.book-card > h2 {
+    flex: 2 1 0;
+}
+
+.book-card > button {
+    flex: 1 1 0;
+    width: 80%;
+}
+
 footer {
-    position: absolute;
-    bottom: 0;
+    flex: 0.5 1 0;
     width: 100%;
     height: 7%;
     justify-content: center;
+    align-items: center;
 }
 
 #dialog-book {
