--- a/style.css
+++ b/style.css
@@ -29,7 +29,11 @@ header {
     flex: 1 1 0;
     justify-content: space-between;
     align-items: center;
-    padding-bottom: 5%;
+    padding-bottom: 10%;
+}
+
+header > * {
+    flex: 1 1 25%;
 }
 
 main {
@@ -45,7 +49,7 @@ main {
 #book-cards > * {
     display: flex;
     gap: 3%;
-    height: 200px;
+    height: 250px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
