--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
     margin: 0;
     box-sizing: border-box;
     min-height: 100vh;
+    font-family: : Georgia, 'Times New Roman', Times, serif;
 }
 
 footer, header {
@@ -12,7 +13,8 @@ footer, header {
 }
 
 .content {
-    flex: 10 1 0;
+    min-height: 100vh;
+    display: flex;
     padding: 4% 20% 0;
     flex-direction: column;
 }
@@ -29,7 +31,7 @@ header {
     flex: 1 1 0;
     justify-content: space-between;
     align-items: center;
-    padding-bottom: 10%;
+    padding-bottom: 5%;
 }
 
 header > * {
@@ -43,7 +45,7 @@ main {
 #book-cards { 
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 5%;
+    grid-gap: 5%;
 }
 
 #book-cards > * {
