--- a/style.css
+++ b/style.css
@@ -11,16 +11,15 @@ footer, header {
 }
 
 .content {
-    min-height: 100vh;
+    min-height: 80vh;
     padding: 4% 20% 0;
 }
 
 footer {
     width: 100%;
-    height: 7%;
+    height: 3rem;
     justify-content: center;
     align-items: center;
-    margin-top: 10px;
 }
 
 header {
