--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@ body {
     font-family: "Fjalla One", 'Times New Roman', Times, serif;
 }
 
+button {
+    font-family: "Fjalla One", 'Times New Roman', Times, serif;
+}
+
 footer, header {
     display: flex;
 }
@@ -39,7 +43,6 @@ img {
 #no-cards {
     position: relative;
     bottom: 30px;
-    left: 20px;
     text-align: center;
 }
 
@@ -72,8 +75,40 @@ img {
 
 #dialog-book {
     padding: 0;
+    width: 30%;
 }
 
 #dialog-div {
-    padding: 16px;
+    padding: 5% 10%;
+    height: 91.7%;
+}
+
+#book-form { 
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    justify-content: space-between;
+}
+
+#inputs { 
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+    font-size: 1.4rem;
+}
+
+input {
+    height: 1.3rem;
+}
+
+#submit-btn {
+    border-radius: 7px;
+    border: none;
+    height: 10%;
+    font-size: 1rem;
+}
+
+dialog { 
+    border-radius: 15px;
+    height: 54%;
 }
