--- a/style.css
+++ b/style.css
@@ -4,19 +4,22 @@ body {
     box-sizing: border-box;
     min-height: 100vh;
     font-family: "Fjalla One", 'Times New Roman', Times, serif;
+    background-color: rgb(250, 215, 239);
 }
 
 button {
     font-family: "Fjalla One", 'Times New Roman', Times, serif;
 }
 
-footer, header {
-    display: flex;
-}
-
 .content {
     min-height: 80vh;
-    padding: 4% 20% 0;
+    padding-left: 20%;
+    padding-right: 20%;
+    padding-top: 2%;
+}
+
+footer, header {
+    display: flex;
 }
 
 footer {
@@ -27,13 +30,20 @@ footer {
 }
 
 header {
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     padding-bottom: 5%;
 }
 
-header > * {
-    flex: 1 1 25%;
+header button {
+    flex: 0 1 30%;
+    font-size: 1.7rem;
+}
+
+header h1 {
+    margin: 0;
+    flex: 0 1 40%;
+    font-size: 3rem;
 }
 
 img {
@@ -42,8 +52,18 @@ img {
 
 #no-cards {
     position: relative;
-    bottom: 30px;
+    bottom: 10px;
     text-align: center;
+    font-size: 1.5rem;
+}
+
+#second-p {
+    margin: 0;
+    margin-bottom: 4%;
+}
+
+#first-p {
+    margin: 1%;
 }
 
 #book-cards { 
@@ -80,7 +100,7 @@ img {
 
 #dialog-div {
     padding: 5% 10%;
-    height: 91.7%;
+    height: 88%;
 }
 
 #book-form { 
