--- a/style.css
+++ b/style.css
@@ -30,6 +30,25 @@ footer, header {
     display: flex;
 }
 
+a img {
+    width: 20px;
+    height: 20px;
+    margin-left: 4px;
+}
+
+a img:hover {
+    animation: rotation 1s infinite linear;
+}
+
+@keyframes rotation {
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(359deg);
+    }
+  }
+
 footer {
     width: 100%;
     height: 3rem;
@@ -39,7 +58,7 @@ footer {
 }
 
 header {
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
     padding-bottom: 4%;
 }
@@ -58,11 +77,11 @@ header button:hover {
 header h1 {
     margin: 0;
     flex: 0 1 40%;
-    font-size: 3rem;
+    font-size: 2.7rem;
 }
 
-img {
-    width: 65%;
+#no-cards img {
+    width: 50%;
 }
 
 #no-cards {
@@ -119,11 +138,13 @@ img {
 .book-card > button {
     width: 80%;
     font-size: 1.2rem;
-    background-color: rgba(243, 255, 107, 0.79);
+    color: #ffffff;
+    background-color: rgba(255, 216, 44, 0.79);
 }
 
 button.have-read {
     background-color: rgba(143, 255, 147, 0.79);
+    color: #ffffff;
 }
 
 button.remove {
@@ -138,10 +159,10 @@ button.remove:hover {
 
 #dialog-book {
     padding: 0;
-    width: 26%;
+    width: 30%;
     background-color: rgb(250, 215, 239);
     border-radius: 15px;
-    height: 62%;
+    height: 72%;
     border: 1px solid rgba(84, 64, 75, 0.555);
 }
 
@@ -173,13 +194,14 @@ button.remove:hover {
 #inputs { 
     display: flex;
     flex-direction: column;
-    gap: 4px;
+    gap: 5px;
     font-size: 1.2rem;
     height: 34vh;
 }
 
 input {
     padding: 3% 3%;
+    margin-bottom: 2%;
     font-size: 1.3rem;
     background-color: #ffebf7;
     border-radius: 7px;
@@ -205,7 +227,9 @@ input:focus {
 }
 
 #check {
-    transform: scale(1.4);
+    transform: scale(1.8);
+    position: relative;
+    left: -2%;
     width: 12%;
     margin-left: 0;
     accent-color: rgb(255, 118, 134);
